# npm-bot

./: .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  pom.xml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build_and_push.yaml  publish-docker-image.yml  release.yml
npc_bot/: ai.py  app_commands.py  constants.py  discord.py  main.py
src/main/java/com/pragma8123/npcbot/: GlobalCommandRegistrar.java  NpcBotApplication.java  NpcBotConfiguration.java  NpcBotConstants.java  NpcConstants.java
src/main/java/com/pragma8123/npcbot/commands/: AboutCommand.java  CompletionCommand.java  EditCommand.java  HDImageCommand.java  HelpCommand.java  ImageCommand.java  SlashCommand.java
src/main/java/com/pragma8123/npcbot/dalle/: DallEConfiguration.java  DallERequest.java  DallEResponse.java  DallEService.java
src/main/java/com/pragma8123/npcbot/listeners/: ModalSubmitListener.java  SlashCommandListener.java
src/main/java/com/pragma8123/npcbot/modal/: CompletionModal.java  EditModal.java  Modal.java
src/main/java/com/pragma8123/npcbot/openai/: CompletionChoice.java  CompletionRequest.java  CompletionResponse.java  EditChoice.java  EditRequest.java  EditResponse.java  GeneratedImage.java  ImageRequest.java  ImageResponse.java  OpenAiConfiguration.java  OpenAiResponse.java  OpenAiService.java  TokenUsage.java
src/main/resources/: application.yml
src/test/java/com/pragma8123/npcbot/dalle/: DallEConfigurationTest.java  DallEServiceTest.java
src/test/java/com/pragma8123/npcbot/openai/: OpenAiConfigurationTest.java  OpenAiServiceTest.java
