[tool.poetry]
name = "npc-bot"
version = "1.1.2"
description = "Discord bot powered by OpenAI."
authors = ["Pragma8123 <max@machon.family>"]
license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md"]

[tool.poetry.scripts]
npc-bot = 'npc_bot.main:main'

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.17"
discord-py = "^2.3.2"
python-dotenv = "^1.0.1"
openai = "^1.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
