[tool.poetry]
name = "npc-bot"
version = "1.2.0"
description = "Discord bot powered by OpenAI."
authors = ["Pragma8123 <max@machon.family>"]
license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md"]

[tool.poetry.scripts]
npc-bot = 'npc_bot.main:main'

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.3"
discord-py = "^2.3.2"
python-dotenv = "^1.0.1"
setuptools = "^70.0.0"
aiohttp = "^3.9.5"
aiodns = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
