[tool.poetry]
name = "npc-bot"
version = "1.3.3"
description = "Discord bot powered by Stable Diffusion."
authors = ["Pragma8123 <max@machon.family>"]
license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md"]

[tool.poetry.scripts]
npc-bot = 'npc_bot.main:main'

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.4.0"
python-dotenv = "^1.0.1"
setuptools = "^71.1.0"
aiohttp = "^3.10.5"
aiodns = "^3.2.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
